# zkwam-example

./: Cargo.toml  README.md  output.wasm
src/: lib.rs
